# telegram-nsfw-detector-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/bot/handlers/: __init__.py  photo.py  start.py  sticker.py  text.py  video.py
src/core/: config.py  logger.py
src/services/: nsfw_detector.py  video_processor.py
